Regen typescript sdks. Add deployment strategy service. remove old unnecessary service directories for infra. Update deployment strategies
