# services/deployments/spec/v1/openapi.json
@@ -223,41 +223,6 @@
             "schema": {
               "type": "string"
             }
-          },
-          {
-            "name": "scope",
-            "in": "query",
-            "description": "Selector for global vs tenant-scoped models",
-            "required": true,
-            "schema": {
-              "type": "string",
-              "enum": [
-                "tenant",
-                "global"
-              ]
-            }
-          },
-          {
-            "name": "model_name",
-            "in": "path",
-            "required": true,
-            "schema": {
-              "type": "string"
-            }
-          },
-          {
-            "name": "model_author",
-            "in": "path",
-            "required": true,
-            "schema": {
-              "type": "string"
-            }
-          },
-          {
-            "name": "params",
-            "in": "path",
-            "required": true,
-            "schema": {}
           }
         ],
         "requestBody": {
@@ -399,19 +364,40 @@
       "DeployModelWithStrategyBody": {
         "type": "object",
         "required": [
+          "name",
           "model_name",
           "model_author",
           "params"
         ],
         "properties": {
+          "description": {
+            "type": [
+              "string",
+              "null"
+            ]
+          },
           "model_author": {
             "type": "string"
           },
           "model_name": {
             "type": "string"
           },
-          "params": {}
+          "name": {
+            "type": "string"
+          },
+          "params": {},
+          "scope": {
+            "$ref": "#/components/schemas/Scope",
+            "description": "Selector for global vs tenant-scoped models"
+          }
         }
+      },
+      "DeploymentModality": {
+        "type": "string",
+        "enum": [
+          "Batch",
+          "Service"
+        ]
       },
       "DesiredState": {
         "type": "string",
@@ -481,6 +467,7 @@
         "type": "object",
         "required": [
           "id",
+          "name",
           "platform",
           "owner",
           "model",
@@ -508,6 +495,12 @@
             ]
           },
           "deployment_strategy": {
+            "type": [
+              "string",
+              "null"
+            ]
+          },
+          "description": {
             "type": [
               "string",
               "null"
@@ -547,6 +540,9 @@
           },
           "model": {
             "$ref": "#/components/schemas/ModelReference"
+          },
+          "name": {
+            "type": "string"
           },
           "owner": {
             "type": "string"
@@ -808,6 +804,13 @@
           "spec": {}
         }
       },
+      "Scope": {
+        "type": "string",
+        "enum": [
+          "tenant",
+          "global"
+        ]
+      },
       "ServerErrorResponse": {
         "type": "object",
         "required": [
@@ -852,9 +855,13 @@
         "required": [
           "name",
           "platform",
+          "deployment_modality",
           "parameters"
         ],
         "properties": {
+          "deployment_modality": {
+            "$ref": "#/components/schemas/DeploymentModality"
+          },
           "description": {
             "type": [
               "string",
